# libipt

./: .gitignore  CMakeLists.txt  LICENSE  README  SECURITY.md
.github/workflows/: coverity.yml  test.yml
doc/: Doxyfile.in  getting_started.md  howto_build.md  howto_capture.md  howto_libipt.md  howto_pttc.md  pttc.md
doc/doxygen/: Doxyfile.in  DoxygenLayout.xml  about.md  footer.html  header.html  intel_styles.css  legal.md  mainpage.md
doc/man/: CMakeLists.txt  pt_alloc_encoder.3.md  pt_blk_alloc_decoder.3.md  pt_blk_get_offset.3.md  pt_blk_next.3.md  pt_blk_sync_forward.3.md  pt_config.3.md  pt_enc_get_config.3.md  pt_enc_get_offset.3.md  pt_evt_alloc_decoder.3.md  pt_evt_get_offset.3.md  pt_evt_next.3.md  pt_evt_sync_forward.3.md  pt_image_add_file.3.md  pt_image_alloc.3.md  pt_image_remove_by_filename.3.md  pt_image_set_callback.3.md  pt_insn_alloc_decoder.3.md  pt_insn_get_image.3.md  pt_insn_get_offset.3.md  pt_insn_next.3.md  pt_insn_sync_forward.3.md  pt_iscache_add_file.3.md  pt_iscache_alloc.3.md  pt_iscache_read.3.md  pt_iscache_set_limit.3.md  pt_library_version.3.md  pt_packet.3.md  pt_pkt_alloc_decoder.3.md  pt_pkt_get_offset.3.md  pt_pkt_sync_forward.3.md  pt_qry_alloc_decoder.3.md  pt_qry_cond_branch.3.md  pt_qry_event.3.md  pt_qry_get_offset.3.md  pt_qry_sync_forward.3.md  pt_qry_time.3.md
elf/: CMakeLists.txt
elf/include/: pt_elf.h
elf/src/: pt_elf.c
include/: pt_check.h  pt_compiler.h  pt_version.h
include/posix/: pt_threads.h  threads.h
include/windows/: inttypes.h  pt_threads.h  threads.h
libipt/: CMakeLists.txt
libipt/doc/: pt_decoding.txt
libipt/include/: intel-pt.h  intel-pt.h.in  pt_compiler.h  pt_config.h  pt_decode.h  pt_encode.h  pt_error.h  pt_insn.h  pt_opcode.h  pt_packet.h  pt_query.h  pt_version.h
libipt/internal/include/: pt_asid.h  pt_block_cache.h  pt_block_decoder.h  pt_config.h  pt_cpu.h  pt_cpuid.h  pt_decoder.h  pt_decoder_function.h  pt_encoder.h  pt_event_decoder.h  pt_event_queue.h  pt_ild.h  pt_image.h  pt_image_section_cache.h  pt_insn.h  pt_insn_decoder.h  pt_last_ip.h  pt_mapped_section.h  pt_msec_cache.h  pt_opcodes.h  pt_packet.h  pt_packet_decode.h  pt_packet_decoder.h  pt_query_decoder.h  pt_retstack.h  pt_section.h  pt_section_file.h  pt_state.h  pt_sync.h  pt_time.h  pt_tnt_cache.h  pti-defs.h  pti-disp-defs.h  pti-disp.h  pti-disp_default.h  pti-enums.h  pti-ild.h  pti-imm-defs.h  pti-imm.h  pti-modrm-defs.h  (+3 more)
libipt/internal/include/posix/: pt_section_posix.h
libipt/internal/include/windows/: pt_section_windows.h
libipt/src/: pt_asid.c  pt_block_cache.c  pt_block_decoder.c  pt_config.c  pt_cpu.c  pt_decoder.c  pt_decoder_function.c  pt_encode.c  pt_encoder.c  pt_error.c  pt_event_decoder.c  pt_event_queue.c  pt_ild.c  pt_image.c  pt_image_section_cache.c  pt_insn.c  pt_insn_decoder.c  pt_last_ip.c  pt_mapped_section.c  pt_msec_cache.c  pt_packet.c  pt_packet_decode.c  pt_packet_decoder.c  pt_query.c  pt_query_decoder.c  pt_retstack.c  pt_section.c  pt_section_file.c  pt_state.c  pt_sync.c  pt_time.c  pt_tnt_cache.c  pt_version.c
libipt/src/posix/: init.c  pt_cpuid.c  pt_section_mmap.c  pt_section_posix.c
libipt/src/windows/: init.c  pt_cpuid.c  pt_section_windows.c
libipt/test/include/: pt_decoder_fixture.h  suites.h
libipt/test/src/: check.c  check_pt_decoder.c  check_pt_last_ip.c  check_pt_packet.c  check_pt_packet_decode.c  check_pt_query.c  check_pt_state.c  check_pt_sync.c  check_pt_tnt_cache.c  check_pt_use.c  pt_decoder_fixture.c  ptunit-asid.c  ptunit-block_cache.c  ptunit-block_decoder.c  ptunit-config.c  ptunit-cpp.cpp  ptunit-cpu.c  ptunit-encoder.c  ptunit-event_queue.c  ptunit-fetch.c  ptunit-ild.c  ptunit-image.c  ptunit-image_section_cache.c  ptunit-insn_decoder.c  ptunit-last_ip.c  ptunit-mapped_section.c  ptunit-msec_cache.c  ptunit-packet.c  ptunit-packet_decoder.c  ptunit-query.c  ptunit-retstack.c  ptunit-section-file.c  ptunit-section.c  ptunit-sync.c  ptunit-time.c  ptunit-tnt_cache.c
pevent/: CMakeLists.txt
pevent/include/: pevent.h
pevent/src/: pevent.c
pevent/test/src/: ptunit-pevent.c
ptdump/: CMakeLists.txt
ptdump/include/: pt_print.h
ptdump/src/: pt_print.c  ptdump.c
ptseg/: CMakeLists.txt
ptseg/src/: ptseg.c
pttc/: CMakeLists.txt  README
pttc/include/: errcode.h  file.h  parse.h  pttc.h  util.h  yasm.h
pttc/src/: errcode.c  file.c  main.c  parse.c  pttc.c  util.c  yasm.c
pttc/src/posix/: util.c
pttc/test/src/: check.c  (+3 more)
ptunit/: CMakeLists.txt
ptunit/include/: ptunit.h  ptunit_mkfile.h  ptunit_mktempname.h  ptunit_threads.h
ptunit/src/: ptunit-selftest.c  ptunit.c
ptxed/: CMakeLists.txt
ptxed/include/: decode.h  disas.h  event.h  load.h  load_elf.h  memory.h
ptxed/src/: decode.c  disas.c  event.c  load.c  load_elf.c  memory.c  ptxed.c
script/: perf-copy-mapped-files.bash  perf-get-opts.bash  perf-read-aux.bash  perf-read-image.bash  perf-read-sideband.bash  test.bash  test.bat
sideband/: CMakeLists.txt
sideband/include/: libipt-sb.h.in
sideband/src/: pt_sb_context.c  pt_sb_file.c  pt_sb_pevent.c  pt_sb_session.c
test/: CMakeLists.txt
test/pevent/: CMakeLists.txt
test/src/: apl11.ptt  apl12-psb.ptt  apl12-tip_pge.ptt  bad_cpu.ptt  bdm64-tip-xabort.ptt  bdm64-tnt-cond-xabort.ptt  bdm64-tnt-ind_call-xabort.ptt  bdm70-psb_fup-tip_pge.ptt  bdm70-tip_pgd-psb_fup-tip_pge.ptt  call_direct-ret_compressed-pic.ptt  call_direct-ret_compressed.ptt  call_direct-ret_uncompressed.ptt  call_indirect-ret_compressed.ptt  call_indirect-ret_uncompressed.ptt  call_indirect_deferred-ret_compressed.ptt  cbr-cyc.ptt  cbr-mtc-cyc-mtc.ptt  cbr-tsc-cyc-tma.ptt  cbr-tsc-tma-mtc-cyc.ptt  direct_call-tip_pgd_noip-syscall.ptt  direct_jump-tip_pgd_noip-far_call.ptt  dump-all-packets.ptt  exstop-trig.ptt  exstop_ip-tip_pgd.ptt  fup-pip-vmcs-tip.ptt  fup-pip-vmcs-tip_pgd.ptt  fup-tip-eos.ptt  fup-tip-fup-tip_pgd.ptt  fup-tip-trig.ptt  fup-tip.ptt  fup-tip_pgd-stop.ptt  fup-tip_pgd-tip_pge.ptt  fup-tip_pgd-tip_pge_other_ip.ptt  fup-tip_pgd.ptt  fup-tip_pgd_noip.ptt  fup.ptt  int-eretu-cpl_0.ptt  int-eretu.ptt  int-iret-cpl_0.ptt  int-iret-cpl_3.ptt  (+209 more)
(+23 files in other folders)
